compilateurDeca/src/test/deca/context/valid/sans_objet/control/long_eval.deca
// Description:
//    Vérifie la validité contextuelle des expressions booléennes paresseuses complexes.
//
// Resultats:
//    Vérification réussie.
// 
// Historique:
//    cree le 11/01/2026

{
    boolean a = true;
    boolean b = false;
    if ((a && b) || (a || !b)) { 
        println("ok");
    }
}